--- a/html/install.html
+++ b/html/install.html
@@ -5,7 +5,6 @@
     <script src="../libs/jquery-1.3.2.min.js" type="text/javascript"></script>
     <script src="../libs/liger/ligerui.min.js" type="text/javascript"></script> 
 	<script src="../js/install.js" type="text/javascript"></script>
-	
 	<style type="text/css">
 .log {
         background-color: #999999
@@ -58,7 +57,7 @@
     <span id='type'></span>:
     <select name='type'>
 		<option value='mysql'>MySql-Server-Community-5.1 or heigher </option>
-		<option value='postgresql'>PostGreSql-9.1 or heigher</option>
+		<!-- option value='postgresql'>PostGreSql-9.1 or heigher</option -->
     </select><br />                
     <span id='il8n'></span>:
     <select name='il8n'>
@@ -76,42 +75,12 @@
     <div class='log'></div>
 </fieldset>
 
-<fieldset >
+<fieldset class='f_close'>
 	<legend>
 		<button onclick="step4()" class='btn_step'></button>
 	</legend>
     <div class="directions_step"></div>
     <div class='log'></div>
-</fieldset>
-
-<fieldset >
-	<legend>
-		<button onclick="step5()" class='btn_step'></button>
-	</legend>
-	<span id="year_start"></span><input name='year_start' value='2013' /><br/>
-	<span id="year_stop"></span><input name='year_stop' value='2013' />
-    <div class="directions_step"></div>
-    <div class='log'></div>
-</fieldset>
-
-<fieldset class='f_close'>
-	<legend>
-		<button onclick="step6()" class='btn_step'></button>
-	</legend>
-    <div class="directions_step"></div>
-    <div class='log'></div>
-</fieldset>
-
-<fieldset id='step7' style="display: none">
-<legend><button onclick="simulate__exam_paper_multionline()" id='btn_simulate__exam_paper_multionline' class='btn_step'></button></legend>
-<div class="directions_step"></div>
-<div id='log_simulate__exam_paper_multionline' class='log'></div>
-</fieldset>
-
-<fieldset id='step8' style="display: none">
-<legend><button onclick="simulate__exam_paper_multionline__close()" id='btn_simulate__exam_paper_multionline_close' class='btn_step'></button></legend>
-<div class="directions_step"></div>
-<div id='log_simulate__exam_paper_multionline_close' class='log'></div>
 </fieldset>
 
 </body>
