模拟步骤没有隐藏 下级步骤 ,已纠正

--- a/html/simulate.html
+++ b/html/simulate.html
@@ -19,11 +19,11 @@
         background-color: #000000
 }
 .f_close{
-        display: none
+        display: none;
 }
 
 .f_step{
-        display: block
+        display: block;
 }
 	</style>    
 </head>
@@ -37,7 +37,7 @@
     <div class='log'></div>
 </fieldset>
 
-<fieldset class=".f_close">
+<fieldset class="f_close">
 	<legend>
 		<button onclick="step2()" class='btn_step'></button>
 	</legend>
@@ -47,7 +47,7 @@
     <div class='log'></div>
 </fieldset>
 
-<fieldset class=".f_close">
+<fieldset class="f_close">
 	<legend>
 		<button onclick="step3()" class='btn_step'></button>
 	</legend>
@@ -55,7 +55,7 @@
     <div class='log'></div>
 </fieldset>
 
-<fieldset class=".f_close">
+<fieldset class="f_close">
 	<legend>
 		<button onclick="step4()" class='btn_step'></button>
 	</legend>
@@ -63,7 +63,7 @@
     <div class='log'></div>
 </fieldset>
 
-<fieldset class=".f_close">
+<fieldset class="f_close">
 	<legend>
 		<button onclick="step5()" class='btn_step'></button>
 	</legend>
