--- a/html/basic_group__treegrid.html
+++ b/html/basic_group__treegrid.html
@@ -7,22 +7,22 @@
     <link href="../libs/jQuery_LigerUI_V1.2.2/Source/lib/ligerUI/skins/Aqua/css/ligerui-all.css" rel="stylesheet" type="text/css" />    
 
     <script src="../ajaxURL.js" type="text/javascript"></script> 
-    <script src="../js/basic_parameter_data.js" type="text/javascript"></script> 
-    <script src="../language/il8n.js" type="text/javascript"></script>
-    
-    <script src="../js/tools.js" type="text/javascript"></script>   
-    <script src="../js/basic_user.js" type="text/javascript"></script>
-	<script src="../js/exam_subject.js" type="text/javascript"></script> 
+	<script src="../js/basic_parameter_data.js" type="text/javascript"></script> 
+	<script src="../language/il8n.js" type="text/javascript"></script> 
+	
+	<script src="../js/tools.js" type="text/javascript"></script>	
+	<script src="../js/basic_user.js" type="text/javascript"></script>
+	
+	<script src="../js/basic_group.js" type="text/javascript"></script>
 </head>
 <body>
-</body>
 <script type="text/javascript">
 if (top === self) { 
-    var username = getParameter("username", window.location.toString() );
-    var password = MD5( MD5( getParameter("password", window.location.toString()) ) +((new Date()).getHours())) ;
-    basic_user.login(username,password,exam_subject.grid);      
+	var username = getParameter("username", window.location.toString() );
+	var password = MD5( MD5( getParameter("password", window.location.toString()) ) +((new Date()).getHours())) ;
+	basic_user.login(username,password,basic_group.treegrid);		
 } else {
-	exam_subject.grid();
+	basic_group.treegrid();
 }
-</script>
+</script> 
 </html>
