--- a/html/exam_question_log_wrongs__grid.html
+++ b/html/exam_question_log_wrongs__grid.html
@@ -2,21 +2,30 @@
 <html xmlns="http://www.w3.org/1999/xhtml" style="overflow:hidden;">
 <head>
     <meta http-equiv=content-type content="text/html; charset=UTF-8">
-    <link href="../libs/liger/Aqua/css/ligerui-all.css" rel="stylesheet" type="text/css" /> 
-
     <script src="../libs/jquery-1.3.2.min.js" type="text/javascript"></script>    
-    <script src="../libs/liger/ligerui.min.js" type="text/javascript"></script>   
+    <script src="../libs/jQuery_LigerUI_V1.2.2/Source/lib/ligerUI/js/ligerui.all.js.txt" type="text/javascript"></script> 
+    <link href="../libs/jQuery_LigerUI_V1.2.2/Source/lib/ligerUI/skins/Aqua/css/ligerui-all.css" rel="stylesheet" type="text/css" />    
 
-	<script src="../config.js" type="text/javascript"></script> 
-	<script src="../js/basic_user.js" type="text/javascript"></script> 
+    <script src="../ajaxURL.js" type="text/javascript"></script> 
+    <script src="../js/basic_parameter_data.js" type="text/javascript"></script> 
+    <script src="../language/il8n.js" type="text/javascript"></script>
+    
+    <script src="../js/tools.js" type="text/javascript"></script>   
+    <script src="../js/basic_user.js" type="text/javascript"></script>
+    
 	<script src="../js/exam_paper.js" type="text/javascript"></script> 
 	<script src="../js/exam_question_log_wrongs.js" type="text/javascript"></script> 
-	<script src="../js/mylib.js" type="text/javascript"></script> 	
 
 </head>
 <body>
 </body>
 <script type="text/javascript">
-initWebpage("exam_question_log_wrongs.loadConfig(exam_question_log_wrongs.grid)")
+if (top === self) { 
+    var username = getParameter("username", window.location.toString() );
+    var password = MD5( MD5( getParameter("password", window.location.toString()) ) +((new Date()).getHours())) ;
+    basic_user.login(username,password,exam_question_log_wrongs.grid);      
+} else {
+    exam_question_log_wrongs.grid();
+}
 </script>
 </html>
