--- a/html/exam_subject_2_user_log__statistics.html
+++ b/html/exam_subject_2_user_log__statistics.html
@@ -2,24 +2,36 @@
 <html xmlns="http://www.w3.org/1999/xhtml" style="overflow:hidden;">
 <head>
     <meta http-equiv=content-type content="text/html; charset=UTF-8">
-    <link href="../libs/liger/Aqua/css/ligerui-all.css" rel="stylesheet" type="text/css" /> 
+    <script src="../libs/jqflot/jquery.js" type="text/javascript"></script>   
+    <script src="../libs/jQuery_LigerUI_V1.2.2/Source/lib/ligerUI/js/ligerui.all.js.txt" type="text/javascript"></script>     
 
-    <script src="../libs/jquery-1.3.2.min.js" type="text/javascript"></script>    
-    <script src="../libs/liger/ligerui.min.js" type="text/javascript"></script>   
-    <script src="../libs/jquery-validation/jquery.validate.min.js" type="text/javascript"></script> 
-    <script src="../libs/jquery-validation/jquery.metadata.js" type="text/javascript"></script>
-    <script src="../libs/jquery-validation/messages_cn.js" type="text/javascript"></script>         
-
-	<script src="../config.js" type="text/javascript"></script> 
-	<script src="../js/basic_user.js" type="text/javascript"></script> 
-	<script src="../js/mylib.js" type="text/javascript"></script> 	
-	<script src="../libs/heighchart/js/highcharts.js " type="text/javascript"></script>  
-	<script src="../libs/heighchart/js/highcharts-more.js " type="text/javascript"></script>  
+    <script src="../ajaxURL.js" type="text/javascript"></script> 
+    <script src="../js/basic_parameter_data.js" type="text/javascript"></script> 
+    <script src="../language/il8n.js" type="text/javascript"></script>
+    
+    <script src="../js/tools.js" type="text/javascript"></script>   
+    <script src="../js/basic_user.js" type="text/javascript"></script>
+    
 	<script src="../js/exam_subject_2_user_log.js" type="text/javascript"></script> 
+	
+    <!--[if lte IE 8]><script language="javascript" type="text/javascript" src="../libs/jqflot/excanvas.min.js"></script><![endif]-->
+	<script src="../libs/jqflot/jquery.flot.js" type="text/javascript"></script> 
+	<script src="../libs/jqflot/jquery.flot.time.js" type="text/javascript"></script> 
+	<script language="javascript" text="text/javascript" src="../libs/jqflot/jquery.flot.JUMlib.js"></script>
+    <script language="javascript" text="text/javascript" src="../libs/jqflot/jquery.flot.mouse.js"></script>
+    <script language="javascript" text="text/javascript" src="../libs/jqflot/jquery.flot.spider.js"></script>
+	
 </head>
 <body>
+<table width='100%' height="400"><tr width='100%'><td width='50%'><div id="timeline" style='width:80%;height:400px;'></div></td><td width='50%'><div id="spider" style='width:100%;height:400px;'></div></td><tr></table>
 </body>
 <script type="text/javascript">
-initWebpage("exam_subject_2_user_log.loadConfig(exam_subject_2_user_log.initDom)")
+if (top === self) { 
+    var username = getParameter("username", window.location.toString() );
+    var password = MD5( MD5( getParameter("password", window.location.toString()) ) +((new Date()).getHours())) ;
+    basic_user.login(username,password,exam_subject_2_user_log.statistics);      
+} else {
+    exam_subject_2_user_log.statistics();
+}
 </script>
 </html>
