--- a/html/exam_subject__treegrid.html
+++ b/html/exam_subject__treegrid.html
@@ -12,13 +12,17 @@
     
     <script src="../js/tools.js" type="text/javascript"></script>   
     <script src="../js/basic_user.js" type="text/javascript"></script>
-    
-	<script src="../js/exam_paper.js" type="text/javascript"></script> 
-
+	<script src="../js/exam_subject.js" type="text/javascript"></script> 
 </head>
 <body>
 </body>
 <script type="text/javascript">
-initWebpage("");
+if (top === self) { 
+    var username = getParameter("username", window.location.toString() );
+    var password = MD5( MD5( getParameter("password", window.location.toString()) ) +((new Date()).getHours())) ;
+    basic_user.login(username,password,exam_subject.treegrid);      
+} else {
+	exam_subject.treegrid();
+}
 </script>
 </html>
