--- a/html/basic_group__permission_get.html
+++ b/html/basic_group__permission_get.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" style="overflow:hidden;">
+<html xmlns="http://www.w3.org/1999/xhtml" style="overflow-x:hidden;">
 <head>
     <meta http-equiv=content-type content="text/html; charset=UTF-8">
     <script src="../libs/jquery-1.3.2.min.js" type="text/javascript"></script>    
